--- a/1.5/Languages/ChineseTraditional/DefInjected/GeneDef/GeneDefs_BodyModification.xml
+++ b/1.5/Languages/ChineseTraditional/DefInjected/GeneDef/GeneDefs_BodyModification.xml
@@ -9,10 +9,10 @@
   <BodyModificationBodyPurist.labelShortAdj>纯粹主义</BodyModificationBodyPurist.labelShortAdj>
   
   <!-- EN: Transhumanist -->
-  <BodyModificationTranshumanist.label>超人主义</BodyModificationTranshumanist.label>
+  <BodyModificationTranshumanist.label>義體主義</BodyModificationTranshumanist.label>
   <!-- EN: No description. -->
-  <BodyModificationTranshumanist.description>超人类主义者。</BodyModificationTranshumanist.description>
+  <BodyModificationTranshumanist.description>基因攜帶者會帶有"義體主義"特性</BodyModificationTranshumanist.description>
   <!-- EN: Transhumanist -->
-  <BodyModificationTranshumanist.labelShortAdj>超人主义</BodyModificationTranshumanist.labelShortAdj>
+  <BodyModificationTranshumanist.labelShortAdj>義體主義</BodyModificationTranshumanist.labelShortAdj>
   
 </LanguageData>
