--- a/1.5/Languages/ChineseTraditional/DefInjected/GeneDef/GeneDefs_Bodysize.xml
+++ b/1.5/Languages/ChineseTraditional/DefInjected/GeneDef/GeneDefs_Bodysize.xml
@@ -1,18 +1,15 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
-  
   <!-- EN: Large body -->
-  <LargeBodySize.label>大体型</LargeBodySize.label>
+  <LargeBodySize.label>大體型</LargeBodySize.label>
   <!-- EN: Carriers of this gene has larger body size than others. -->
-  <LargeBodySize.description>这种基因的携带者的体型比一般人大。</LargeBodySize.description>
+  <LargeBodySize.description>基因攜帶者的體型比一般人大。</LargeBodySize.description>
   <!-- EN: Large body -->
-  <LargeBodySize.labelShortAdj>大体型</LargeBodySize.labelShortAdj>
-  
+  <LargeBodySize.labelShortAdj>大體型</LargeBodySize.labelShortAdj>
   <!-- EN: Small body -->
-  <SmallBodySize.label>小体型</SmallBodySize.label>
+  <SmallBodySize.label>小體型</SmallBodySize.label>
   <!-- EN: Carriers of this gene has smaller body size than others. -->
-  <SmallBodySize.description>这种基因的携带者的体型比一般人小。</SmallBodySize.description>
+  <SmallBodySize.description>基因攜帶者的體型比一般人小。</SmallBodySize.description>
   <!-- EN: Small body -->
-  <SmallBodySize.labelShortAdj>小体型</SmallBodySize.labelShortAdj>
-  
+  <SmallBodySize.labelShortAdj>小體型</SmallBodySize.labelShortAdj>
 </LanguageData>
