--- a/1.5/Languages/ChineseSimplified/DefInjected/GeneCategoryDef/GeneCategoryDefs_hidden.xml
+++ b/1.5/Languages/ChineseSimplified/DefInjected/GeneCategoryDef/GeneCategoryDefs_hidden.xml
@@ -22,6 +22,6 @@
   <Pyromaniac.label>纵火狂</Pyromaniac.label>
   <!-- EN: PsychicTraits -->
   <PsychicTraits.label>心灵敏感度</PsychicTraits.label>
-  <!-- EN: SlowLearner -->
-  <SlowLearner.label>脑子慢</SlowLearner.label>
+  <!-- EN: TooSmart -->
+  <TooSmart.label>脑子慢</TooSmart.label>
 </LanguageData>
