--- a/1.5/Languages/ChineseTraditional/DefInjected/GeneCategoryDef/GeneCategoryDefs_hidden.xml
+++ b/1.5/Languages/ChineseTraditional/DefInjected/GeneCategoryDef/GeneCategoryDefs_hidden.xml
@@ -22,6 +22,6 @@
   <Pyromaniac.label>縱火狂</Pyromaniac.label>
   <!-- EN: PsychicTraits -->
   <PsychicTraits.label>心靈敏感</PsychicTraits.label>
-  <!-- EN: SlowLearner -->
-  <SlowLearner.label>緩慢學習</SlowLearner.label>
+  <!-- EN: TooSmart -->
+  <TooSmart.label>緩慢學習</TooSmart.label>
 </LanguageData>
